--- a/src/App.css
+++ b/src/App.css
@@ -128,7 +128,7 @@ input:focus-visible {
 }
 
 .main-entry-form {
-  width: 100%;
+  width: 94%;
   display: flex;
   position: relative;
   text-align: center;
@@ -142,22 +142,22 @@ input:focus-visible {
 }
 
 .main-heading {
-  font-size: 48px;
+  font-size: 36px;
+  text-align: center;
 }
 
 .logo {
   width: 80%;
-  max-width: 280px;
+  max-width: 200px;
   text-align: center;
 }
 
 .error {
   width: 100%;
-  bottom: -80px;
+  margin-top: 16px;
   max-width: 400px;
   padding: 8px 16px;
   border-radius: 4px;
-  position: absolute;
   color: var(--main-color);
   border: 2px solid var(--main-color);
 }
@@ -270,6 +270,15 @@ input:focus-visible {
 
   .home {
     flex-direction: row;
+  }
+
+  .error {
+    bottom: -80px;
+    position: absolute;
+  }
+
+  .logo {
+    max-width: 280px;
   }
 }
 
